--- a/12-adjoint/perturbation.tex
+++ b/12-adjoint/perturbation.tex
@@ -57,12 +57,14 @@ The Adjoint Equation in \textbf{Multiplying Media}
 
 We will call the fission operator $G$, where
 \[
-G \zeta = \frac{\chi(E)}{4\pi}\int_0^{\infty} dE' \: \nu(E') \Sigma_f(E') \int_{4\pi} d\vOmega' \psi(\rvec, \vOmega', E')
+G \zeta = \frac{\chi(E)}{4\pi}\int_0^{\infty} dE' \: \nu(E') \Sigma_f(E') \int_{4\pi} d\vOmega' \zeta(\rvec, \vOmega', E')
 \]
 To get the adjoint version, we can take the same approach as with the scattering operator to get
 \[
-G^{\dagger} \zeta^{\dagger} = \frac{\nu(E) \Sigma_f(E)}{4\pi}\int_0^{\infty} dE' \: \chi(E') \int_{4\pi} d\vOmega' \psi^{\dagger}(\rvec, \vOmega', E')
+G^{\dagger} \zeta^{\dagger} = \frac{\nu(E) \Sigma_f(E)}{4\pi}\int_0^{\infty} dE' \: \chi(E') \int_{4\pi} d\vOmega' \zeta^{\dagger}(\rvec, \vOmega', E')\:.
 \]
+Note that this operator obeys the adjoint identity as well: $\langle\zeta^{\dagger}, G \zeta\rangle = \langle\zeta, G^{\dagger} \zeta^{\dagger}\rangle$.
+
 We can combine this operator with $H$ to use the techniques in the preceding section to look at subcritical systems.\\
 We replace $H$ and $H^{\dagger}$ with $H-G$ and $H^{\dagger}-G^{\dagger}$, respectively.\\
 
@@ -79,8 +81,11 @@ Now $\psi^{\dagger}$ is the fundamental mode, $\psi^{\dagger} > 0$ for $\rvec \i
 Next, compare the two equations the way we did for response: multiply the forward equation by $\psi^{\dagger}$, integrate both over volume, and subtract for the adjoint equation multiplied by $\psi$ and integrated:
 \begin{align*}
 \langle\psi^{\dagger}, H\psi\rangle - \langle\psi, H^{\dagger} \psi^{\dagger}\rangle &- \frac{1}{k}\langle\psi^{\dagger}, G\psi\rangle + \frac{1}{k^{\dagger}}\langle\psi, G^{\dagger}\psi^{\dagger}\rangle = 0\\
-\bigl(\frac{1}{k} - \frac{1}{k^{\dagger}} \bigr)\langle\psi^{\dagger}, G\psi\rangle  &= 0 \\
-k &= k^{\dagger} \quad \text{because }G\psi > 0
+%
+\text{and because }&\langle\psi^{\dagger}, G \psi\rangle = \langle\psi, G^{\dagger} \psi^{\dagger}\rangle\:,\\
+%
+\bigl(\frac{1}{k} -& \frac{1}{k^{\dagger}} \bigr)\langle\psi^{\dagger}, G\psi\rangle  = 0 \\
+\therefore \: k &= k^{\dagger} \quad \text{because }G\psi > \:.
 \end{align*}
 
 Cool. What do we do with that? We can figure out the effect of small changes to critical systems, which is super useful in NE!
@@ -105,7 +110,7 @@ We can represent system perturbation by adding small quantities to the operators
 \[
 (H_0 + \delta H)(\psi_0 + \delta \psi) - \frac{1}{k_0 + \delta k}(G_0 + \delta G)(\psi_0 + \delta \psi) = 0
 \]
-Because perturbations are small, we can ignore second order terms. Then
+We'll multiply the system out and, because perturbations are small, we can ignore second order terms (anything with two $\delta$s multiplied together). We then do some rearranging
 \begin{align*}
 H_0 \psi_0 + \delta H \psi_0 &+ H_0\delta\psi - \bigl(\frac{1}{k_0 + \delta k}\bigr)\bigl(G_0\psi_0 + \delta G \psi_0 + G_0\delta\psi \bigr) \approx 0 \\
 %
@@ -114,13 +119,13 @@ H_0 \psi_0 + \delta H \psi_0 &+ H_0\delta\psi - \bigl(\frac{1}{k_0 + \delta k}\b
 %
 -\frac{\delta k}{k_0^2}G_0\psi_0 &\approx \underbrace{\bigl(H_0 - \frac{1}{k_0}G_0 \bigr)\psi_0}_{\text{fundamental mode}=0} + \bigl(\delta H - \frac{1}{k_0}\delta G\bigr)\psi_0  + \bigl(H_0 - \frac{1}{k_0}G_0 \bigr)\delta \psi
 \end{align*}
-To use inner product identities, we (as before) multiply by $\psi_0^{\dagger}$ and integrate over phase space to get
+To set ourselves up for the next step, we again multiply by $\psi_0^{\dagger}$ and integrate over phase space to get
 \begin{equation}
 -\frac{\delta k}{k_0^2} \langle \psi_0^{\dagger}, G_0\psi_0 \rangle \approx \langle \psi_0^{\dagger},\bigl(\delta H - \frac{1}{k_0}\delta G\bigr)\psi_0 \rangle + \langle \psi_0^{\dagger},\bigl(H_0 - \frac{1}{k_0}G_0 \bigr)\delta \psi \rangle
 \label{eq:perturb}
 \end{equation}
 
-Next, we can use the adjoint identity (using a modified operator) and let $\zeta = \delta\psi$ and $\zeta^{\dagger} = \psi_0^{\dagger}$ we can see:
+Next, we can use the adjoint identity (where we modify operator to include fission). To see how this works, we'll take the identity we used before and let $\zeta = \delta\psi$ and $\zeta^{\dagger} = \psi_0^{\dagger}$. We can make this choice because these are functions in the function space (so it's valid) and it turns out this choice will be strategically useful. We can see:
 \begin{align*}
 \langle\zeta^{\dagger}, H \zeta\rangle &= \langle\zeta, H^{\dagger} \zeta^{\dagger}\rangle \\
 %
@@ -133,7 +138,7 @@ With all of this, we can now say
 \[
 \frac{\delta k}{k_0^2} \approx -\frac{\langle \psi_0^{\dagger},\bigl(\delta H - \frac{1}{k_0}\delta G\bigr)\psi_0 \rangle}{\langle \psi_0^{\dagger}, G_0\psi_0 \rangle}
 \]
-This means that if we know the two unperturbed solutions $\psi_0^{\dagger}$ and $\psi_0$ we can find the reactivity change for any perturbations.
+This means that if we know the two unperturbed solutions $\psi_0^{\dagger}$ and $\psi_0$ we can find the reactivity change for any perturbations -- which is a very useful outcome.
 
 ----------------------------\\
 Other \textbf{Boundary Conditions} for the adjoint operator
