--- a/10-moc/moc.tex
+++ b/10-moc/moc.tex
@@ -92,7 +92,7 @@ We will use a somewhat simpler way to describe the angle space, using \autoref{f
 
 The streaming term is 
 \begin{align*}
-\vOmega \cdot \nabla \psi(\rvec, \vOmega, E) &= \mu \frac{\partial \psi}{\partial x} + \eta \frac{\partial \psi}{\partial x} + \xi \frac{\partial \psi}{\partial z} \\
+\vOmega \cdot \nabla \psi(\rvec, \vOmega, E) &= \mu \frac{\partial \psi}{\partial x} + \eta \frac{\partial \psi}{\partial y} + \xi \frac{\partial \psi}{\partial z} \\
 \mu^2 &+ \eta^2 + \xi^2 = 1 \\
 \vOmega &= \mu \hat{x} + \eta \hat{y} + \xi \hat{z}
 \end{align*}
