--- a/10-moc/moc.tex
+++ b/10-moc/moc.tex
@@ -199,7 +199,7 @@ Recall the integral form of the TE:
 \label{eq:integral}
 \end{equation}
 %
-We can rewrite this with operators to think about how the levels of collisions build up the flux at a given point in phase space. Such an understand both helps us conceptualize transport, but also builds tools we can use computationally.\\
+We can rewrite this with operators to think about how the levels of collisions build up the flux at a given point in phase space. Such an understanding both helps us conceptualize transport, but also builds tools we can use computationally.\\
 If we define $Q'$ as the integrated fixed source and\\
 $K$ as the appropriate integral operator \\
 then $K\psi$ is the neutron production by scattering and fission. \\
