removed minus sign typo

--- a/10-moc/moc.tex
+++ b/10-moc/moc.tex
@@ -239,7 +239,7 @@ We can use this source in Eqn.~\ref{eq:integral}, integrate the integrating fact
 \begin{align*}
 d\vOmega &= \frac{dA}{\rho'^2}\\
 d\rho' dA &= dV \\
-\int_{4\pi} d\vOmega \int_0^{\infty} d\rho' &-= \int_{V} \frac{dV}{\rho'^2}
+\int_{4\pi} d\vOmega \int_0^{\infty} d\rho' &= \int_{V} \frac{dV}{\rho'^2}
 \end{align*}
 %
 We can also recall that $\rho' = |\vec{r} - \vec{r}'|$, we can let $dV = d^3r'$, and we will define
