removing old mc files and renaming in new structure.

--- a/14-mc/mc-intro.tex
+++ b/14-mc/mc-intro.tex
@@ -49,16 +49,15 @@
 %---------------------------------------------------------------------------
 \begin{document}
 \begin{center}
-{\bf NE 250, F15\\
-October 21, 2015 
+{\bf NE 250, F17\\
+November 9, 2017 
 }
 \end{center}
 
 \textbf{Monte Carlo} for neutral particle transport
 
-So far we've talked about the diffusion equation, derived the transport equation a few ways, and talked about the adjoint. \\
-I'd like to spend the next bit of time talking about Monte Carlo methods, variance reduction, and how we can use the adjoint with variance reduction (note that I've totally just canned the syllabus). \\
-After that we'll move into discretization and solution methods for the deterministic transport equation. 
+I'd like to spend the few lectures talking about Monte Carlo methods, variance reduction, and how we can use the adjoint with variance reduction. \\
+Monte Carlo is used extremely widely. I think it's useful for all of you to have a sense of how it works, even if we don't go into it too deeply.
 
 What is Monte Carlo?
   \begin{itemize}
